log/build_2026-01-14_10-07-01/mio_primo_pkg/stderr.log
  File "/home/francesco/LIMO_prj/install/mio_primo_pkg/lib/python3.10/site-packages/mio_primo_pkg/simulatore.py", line 4
    from matplotlib.animation 
                              ^
SyntaxError: invalid syntax

